--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,124 @@
+anaconda==0.0.1.1
+aniso8601==9.0.1
+appnope==0.1.0
+attrs==19.3.0
+backcall==0.1.0
+beautifulsoup4==4.8.2
+bleach==3.1.1
+certifi==2019.11.28
+chardet==3.0.4
 click==7.1.2
+conda==4.3.16
+cycler==0.10.0
+dateparser==0.7.4
+decorator==4.4.1
+defusedxml==0.6.0
+Django==2.2.4
+entrypoints==0.3
 Flask==1.1.2
+Flask-MySQL==1.5.2
+Flask-RESTful==0.3.8
+Flask-SQLAlchemy==2.4.4
+get==2019.4.13
+graphviz==0.14
+gunzip==0.1.9
+idna==2.9
+import-ipynb==0.1.3
+importlib-metadata==1.5.0
+imutils==0.5.3
+ipykernel==5.1.4
+ipython==7.12.0
+ipython-genutils==0.2.0
+ipywidgets==7.5.1
+iso-639==0.4.5
+iso3166==1.0.1
+iso8601==0.1.12
+isodate==0.6.0
 itsdangerous==1.1.0
-Jinja2==2.11.3
+jedi==0.16.0
+Jinja2==2.11.1
+joblib==0.14.1
+jsonify==0.5
+jsonschema==3.2.0
+jupyter==1.0.0
+jupyter-client==5.3.4
+jupyter-console==6.1.0
+jupyter-core==4.6.3
+kiwisolver==1.1.0
+lambda==0.0.1
+m3u8==0.6.0
 MarkupSafe==1.1.1
+matplotlib==3.1.3
+microapp==0.2.1
+mistune==0.8.4
+mysql==0.0.2
+mysql-connector-python==8.0.20
+mysqlclient==2.0.3
+nbconvert==5.6.1
+nbformat==5.0.4
+networkx==2.3
+notebook==6.0.3
+numpy==1.18.1
+opencv-python==4.2.0.34
+pafy==0.5.5
+panda==0.3.1
+pandas==1.0.1
+pandocfilters==1.4.2
+parso==0.6.1
+pexpect==4.8.0
+pickleshare==0.7.5
+post==2019.4.13
+prometheus-client==0.7.1
+prompt-toolkit==3.0.3
+protobuf==3.12.1
+ptyprocess==0.6.0
+public==2019.4.13
+pycosat==0.6.3
+pycryptodome==3.9.7
+Pygments==2.5.2
+pygraphviz==1.5
+pymediainfo==4.2.1
+PyMySQL==0.9.3
+pyparsing==2.4.6
+pyrsistent==0.15.7
+PySocks==1.7.1
+python-dateutil==2.8.1
+pytube==9.6.0
+pytube3==9.6.4
+pytz==2019.2
+PyYAML==5.4.1
+pyzmq==18.1.1
+qtconsole==4.6.0
+query-string==2019.4.13
+regex==2020.2.20
+request==2019.4.13
+requests==2.23.0
+ruamel.yaml==0.16.10
+ruamel.yaml.clib==0.2.0
+scikit-learn==0.22.2.post1
+scipy==1.4.1
+selenium==3.141.0
+Send2Trash==1.5.0
+six==1.14.0
+sklearn==0.0
+soupsieve==2.0
+SQLAlchemy==1.3.23
+sqlparse==0.3.0
+streamlink==1.4.1
+terminado==0.8.3
+testpath==0.4.4
+tornado==6.0.3
+tqdm==4.46.0
+traitlets==4.3.3
+typing-extensions==3.7.4.2
+tzlocal==2.0.0
+urllib3==1.25.8
+wcwidth==0.1.8
+webencodings==0.5.1
+webget==1.0
+websocket-client==0.57.0
 Werkzeug==1.0.1
+wget==3.2
+widgetsnbextension==3.5.1
+xlrd==1.2.0
+zipp==3.0.0
