--- a/haskell-new/haskell-new.cabal
+++ b/haskell-new/haskell-new.cabal
@@ -46,6 +46,8 @@ executable haskell-new-exe
   build-depends:
       base >=4.7 && <5
     , haskell-new
+    , scotty
+    , aeson
   default-language: Haskell2010
 
 test-suite haskell-new-test
