--- a/haskell-new/haskell-new.cabal
+++ b/haskell-new/haskell-new.cabal
@@ -48,6 +48,8 @@ executable haskell-new-exe
     , haskell-new
     , scotty
     , aeson
+    , bytestring
+    , text
   default-language: Haskell2010
 
 test-suite haskell-new-test
